# PhytonSredniozaawansowany

./: fun1.py  funk2.py  klasa1.py  opcj_klucze.py  poli1.py  prefer_func.py  przyklad4.py  pyproject.toml  requirements.txt  sekw3.py  zmienne_arg.py
Day1-2/: fun1.py  funk2.py  funk3.py  kalkulatorek.py  klasa2.py  klasa3.py  klasa4.py  klasa_danych.py  posortowanie.py  przyklad1.py  przyklad2.py  przyklad3.py  przyklad5.py  sekw1.py  sekw2.py
Day3/: atrybuty.py  automate.ini  class_metod.py  config.yaml  cron.py  domieszki.py  importowanie_pdf.py  klasa_super.py  klasy_sposob1.py  klasy_sposob2.py  make_pdf.py  struct_pdf.py  task1.py  task2.py  waterm.py  wynik.txt  wynik2.txt
Dzieło 2/: Projekt3day.py
Dzieło 3/: Dzieło 4 sklejka różnych.py
Dzieło1/: Projekt2day.py
